log

Wed 13 Mar 2024 08:38:01 PM UTC: 
 tests:  0|7
total_score: 0/70
1d762fd
Wed 13 Mar 2024 08:43:20 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:17: error: expected expression before ‘]’ token
   13 |   int max = arr[];
      |                 ^
Compilation failed
b6e329b
